# sc2-ai

./: .gitmodules  Cargo.toml  build.rs
html/: actions.html  controls.html  details.html  host.html  map.html  play.html  progress.html
sc2-ai/: Cargo.toml
sc2-ai/src/: client.rs  main.rs  process.rs
sc2-ai/src/ai/: base.rs  mod.rs
sc2-ai/src/core/: action.rs  client.rs  command.rs  mod.rs  process.rs
sc2-ai/src/game/: action.rs  map.rs  mod.rs  player.rs  position.rs  state.rs
sc2-ai/src/game/action/: build.rs  mod.rs  move.rs
sc2-ai/src/game/debug/: color.rs  cuboid.rs  draw.rs  line.rs  mod.rs  sphere.rs  text.rs
sc2-ai/src/game/entity/: building.rs  map.rs  mod.rs  unit.rs
sc2-ai/src/game/geometry/: cuboid.rs  line.rs  line2.rs  line3.rs  mod.rs  point.rs  rect.rs  sphere.rs  vec2.rs  vec3.rs
sc2-ai/src/game/map/: height.rs  mod.rs  placement.rs
sc2-ai/src/webview/: mod.rs
sc2-proto/: Cargo.toml  build.rs
sc2-proto/src/: ability.rs  lib.rs  unit.rs
