[package]
name = "sc2-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
async-net = "2.0.0"
bevy = { version = "0.15.3", default-features = false, features = ["multi_threaded"] }
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
duplicate = "2.0.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-tungstenite = "0.17.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
protobuf = { version = "3.7.2", features = ["bytes"] }
regex = "1.11.1"
rust-sc2 = "1.1.2"
sc2-proto = { path = "../sc2-proto" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.2"
